// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  method="put"
  name="auth.Test"
  parseResponse={undefined}
  path="/auth/test"
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
   - 
  <div
    defaultParse={true}
    foo="bar"
    method="put"
    name="auth.Test"
    path="/auth/test"
    render={[Function]}
    renderCreated={[Function]}
    user={
      Object {
        "foo": "bar",
      }
    }
  >
    Created - 
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div
  method="post"
  name="auth.Test"
  parseResponse={[Function]}
  path="/auth/test"
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
   - 
  <div
    foo="bar"
    name="auth.Test"
    path="/auth/test"
    render={[Function]}
    renderCreated={[Function]}
    user={
      Object {
        "foo": "bar",
      }
    }
  >
    Created - 
  </div>
</div>
`;
